--- a/app/src/main/res/layout/activity_won.xml
+++ b/app/src/main/res/layout/activity_won.xml
@@ -11,102 +11,123 @@
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="400dp"
-        android:background="@drawable/quiz"
+        android:layout_width="343dp"
+        android:layout_height="408dp"
         android:layout_marginTop="100dp"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
+        <com.example.loadinganimation.LoadingAnimation
+            android:id="@+id/animNext"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.example.loadinganimation.LoadingAnimation
-                android:id="@+id/celebration"
-                android:layout_width="match_parent"
-                android:layout_height="382dp"
-                android:layout_marginBottom="70dp"
-                android:elevation="10dp"
-                app:barType="@drawable/clock"
-                app:boldText="false"
-                app:enlarge="5"
-                app:textColor="@color/purple_500"
-                app:textSize="15sp" />
-
-        <ImageView
-            android:id="@+id/tropy"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/trophy" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="center"
+            android:layout_height="424dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
             android:background="@color/white"
-            android:layout_marginTop="167dp"
-            android:layout_marginStart="18dp"
-            android:src="@drawable/baseline_correct2"/>
+            android:layout_marginBottom="70dp"
+            android:elevation="10dp"
+            app:barType="@drawable/trophygif"
+            app:boldText="false"
+            app:enlarge="5"
+            app:textColor="@color/purple_500"
+            app:textSize="15sp">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/baseline_disabled_by_default_24"
-            android:layout_marginTop="214dp"
-            android:layout_marginStart="18dp"
-            />
-
-        <TextView
-            android:id="@+id/corrext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-           android:layout_marginStart="50dp"
-            android:layout_marginTop="150dp"
-            android:text="15"
-            android:textColor="@color/black"
-            android:textSize="40dp" />
-
-        <TextView
-            android:id="@+id/wrong"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="200dp"
-            android:textColor="@color/black"
-            android:text="15"
-            android:textSize="40dp" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Restart"
-            android:backgroundTint="@color/green"
-            android:layout_marginTop="340dp"
-            android:layout_marginStart="25dp"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Exit"
-            android:textStyle="bold"
-            android:backgroundTint="#ED0D0D"
-            android:layout_marginTop="340dp"
-            android:layout_marginStart="180dp"/>
-
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/char11"
-                android:layout_width="185dp"
-                android:layout_height="177dp"
+            <RelativeLayout
+                android:layout_width="305dp"
+                android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
-                android:layout_alignParentBottom="true"
-                android:layout_marginEnd="9dp"
-                android:layout_marginBottom="86dp" />
+                android:background="@color/white"
+                android:layout_marginEnd="14dp">
 
-        </RelativeLayout>
+
+                <com.example.loadinganimation.LoadingAnimation
+                    android:id="@+id/celebration"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="70dp"
+                    android:elevation="10dp"
+                    app:barType="@drawable/trophygif"
+                    app:boldText="false"
+                    app:enlarge="5"
+                    app:textColor="@color/purple_500"
+                    app:textSize="15sp" />
+
+                <ImageView
+                    android:id="@+id/tropy"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginStart="100dp"
+                    android:layout_marginTop="20dp"
+                    android:src="@drawable/trophy" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginTop="167dp"
+                    android:background="@color/white"
+                    android:scaleType="center"
+                    android:src="@drawable/baseline_correct2" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginTop="214dp"
+                    android:src="@drawable/baseline_disabled_by_default_24" />
+
+                <TextView
+                    android:id="@+id/corrext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="150dp"
+                    android:text="15"
+                    android:textColor="@color/black"
+                    android:textSize="40dp" />
+
+                <TextView
+                    android:id="@+id/wrong"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="200dp"
+                    android:text="15"
+                    android:textColor="@color/black"
+                    android:textSize="40dp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="340dp"
+                    android:backgroundTint="@color/green"
+                    android:id="@+id/RestartQuiz"
+                    android:text="Restart" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="180dp"
+                    android:layout_marginTop="340dp"
+                    android:id="@+id/ExitQuiz"
+                    android:backgroundTint="#ED0D0D"
+                    android:text="Exit"
+                    android:textStyle="bold" />
+
+                <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/char11"
+                    android:layout_width="185dp"
+                    android:layout_height="177dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="9dp"
+                    android:layout_marginBottom="88dp" />
+
+            </RelativeLayout>
+        </com.example.loadinganimation.LoadingAnimation>
     </androidx.cardview.widget.CardView>
 
 
