--- a/app/src/main/res/layout/activity_pdfset.xml
+++ b/app/src/main/res/layout/activity_pdfset.xml
@@ -14,6 +14,7 @@
         app:cardCornerRadius="15dp"
         android:layout_width="250dp"
         android:layout_height="200dp"
+        android:backgroundTint="@color/white"
         android:layout_marginStart="80dp"
         android:layout_marginTop="50dp">
 
@@ -35,6 +36,7 @@
         app:cardCornerRadius="15dp"
         android:layout_width="250dp"
         android:layout_height="200dp"
+        android:backgroundTint="@color/white"
         android:layout_below="@+id/ournotes"
         android:layout_marginTop="20dp"
         android:background="@color/black"
