--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,119 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileActivity"
-    android:background="@color/white"
+    android:background="@drawable/backgroundimage"
     android:orientation="vertical"
     android:gravity="center">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profimg"
-        android:layout_width="96dp"
-        android:layout_height="96dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="126dp"
-        android:layout_marginEnd="166dp"
-        android:layout_marginBottom="437dp"
-        app:civ_border_color="#FF000000"
-        app:civ_border_width="2dp" />
+    <RelativeLayout
+        android:layout_width="356dp"
+        android:layout_height="550dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/profil2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profimg"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="130dp"
+            android:layout_marginBottom="440dp"
+            android:foregroundGravity="center"
+            app:civ_border_color="#FF000000"
+            app:civ_border_width="2dp" />
+
+        <TextView
+            android:id="@+id/Profname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="260dp"
+            android:gravity="center"
+            android:text="Explore Content"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+           android:gravity="center"
+            android:textStyle="italic"
+            android:textSize="15dp"
+            android:textColor="@color/timesup"
+            android:layout_marginBottom="223dp"
+            android:text="Graph of quizz" />
+
+        <TextView
+            android:id="@+id/Profemail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="320dp"
+            android:gravity="center"
+            android:text="Explore Content"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/ProfMobile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="380dp"
+            android:foregroundGravity="center"
+            android:gravity="center"
+            android:text="Explore Content"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/grfdsa"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="268dp"
+            android:layout_marginBottom="135dp"
+            android:src="@drawable/dsabutton" />
+
+        <ImageView
+            android:id="@+id/grfos"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="218dp"
+            android:layout_marginBottom="39dp"
+            android:src="@drawable/osbutton" />
+
+        <ImageView
+            android:id="@+id/grfjava"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="36dp"
+            android:layout_marginBottom="125dp"
+            android:src="@drawable/java" />
+
+        <ImageView
+            android:id="@+id/grfsql"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="80dp"
+            android:layout_marginBottom="34dp"
+            android:src="@drawable/sqlbutton" />
+
+        <ImageView
+            android:id="@+id/grfpython"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="152dp"
+            android:layout_marginBottom="129dp"
+            android:src="@drawable/pythonbutton" />
+
+
+    </RelativeLayout>
 
     <TextView
-        android:id="@+id/Profname"
-        android:layout_width="205dp"
-        android:layout_height="34dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="123dp"
-        android:layout_marginBottom="260dp"
-        android:text="Explore Content"
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:text="Profile"
         android:textColor="@color/black"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+        android:textSize="30dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/Profemail"
-        android:layout_width="205dp"
-        android:layout_height="34dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="314dp"
-        android:text="Explore Content"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/ProfMobile"
-        android:layout_width="205dp"
-        android:layout_height="34dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="122dp"
-        android:layout_marginBottom="366dp"
-        android:text="Explore Content"
-        android:textColor="@color/black"
-        android:textSize="25dp"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/grfdsa"
-        android:layout_width="71dp"
-        android:layout_height="58dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="308dp"
-        android:src="@drawable/trophygif"
-        android:layout_marginBottom="160dp" />
-
-    <ImageView
-        android:id="@+id/grfos"
-        android:layout_width="65dp"
-        android:layout_height="59dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="239dp"
-        android:src="@drawable/trophygif"
-        android:layout_marginBottom="60dp" />
-
-    <ImageView
-        android:id="@+id/grfjava"
-        android:layout_width="65dp"
-        android:layout_height="59dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="32dp"
-        android:src="@drawable/trophygif"
-        android:layout_marginBottom="151dp" />
-
-    <ImageView
-        android:id="@+id/grfsql"
-        android:layout_width="65dp"
-        android:layout_height="59dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="108dp"
-        android:src="@drawable/trophygif"
-        android:layout_marginBottom="60dp" />
-
-    <ImageView
-        android:id="@+id/grfpython"
-        android:layout_width="65dp"
-        android:layout_height="59dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="169dp"
-        android:src="@drawable/trophygif"
-        android:layout_marginBottom="155dp" />
-
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
